--- a/games/player.html
+++ b/games/player.html
@@ -5,6 +5,7 @@
         <meta charset="utf-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1" />
         <title>Ruffle Player</title>
+        <script src="https://unpkg.com/@ruffle-rs/ruffle"></script>
         <link rel="stylesheet" href="css/lato.css">
         <link rel="stylesheet" href="css/common.css">
         <link rel="stylesheet" href="css/player.css">
