--- a/games/yeet.html
+++ b/games/yeet.html
@@ -240,13 +240,13 @@
 <main>
 <header class="wrapper">
   <h1>Luminesence   <img src="icons/favicon-32.png" alt="Failed to load"></h1>
-  <h3>A video game website, with hacks!</h3>
+  <h3>A video game app, with hacks!</h3>
 </header>
 <section id="info" class="wrapper" class="container">
   <div id="infowrap" class="container">
     <article>
       <h1>Constant updates</h1>
-      <p>The website is constantly updated every one to two weeks, so always check to see if you have the latest version! </p>
+      <p>The app is constantly updated every one to two weeks, so always check to see if you have the latest version! </p>
       <a href="https://github.com/LuminesenceProject/Luminesence-website" target="_blank"><button>More</button></a>
     </article>
     <article>
@@ -256,7 +256,7 @@
     </article>
     <article>
       <h1>Fast Proxy</h1>
-      <p>The Luminesence Website has its own state of the art proxy. Using ultraviolet its one of the fastest around.</p>
+      <p>The Luminesence app has its own state of the art proxy. Using ultraviolet its one of the fastest around.</p>
       <a href="https://google-classroom.maddythebaddy.repl.co/" target="_blank"><button>More</button></a>
     </article>
   </div>
@@ -267,7 +267,7 @@
   <div class="container">
     <div>
       <h2>Luminescence</h2>
-      <h3>The main drive behind the website, adds mostly games, and updates the interface.</h3>
+      <h3>The main drive behind the app, adds mostly games, and updates the interface.</h3>
     </div>
     <div>
       <h2>JSTDAM</h2>
